fix font-size bug on safari mobile

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -86,13 +86,25 @@ h1 {
     overflow-x: hidden;
 }
 
+@media only screen and (max-device-width: 480px) {
+    .container--about-text {
+        p {
+            -webkit-text-size-adjust: 100%;
+        }
+    }
+}
+
 .container--about-text {
     display: flex;
     flex-direction: column;
     align-items: center;
     max-width: 40rem;
 
-    h2, p, em, a, span {
+    h2 {
+        color: $black;
+    }
+
+    p, em, a, span {
         color: $black;
     }
 
